--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="phone_number">Phone number</string>
     <string name="country_code">+91 - </string>
     <string name="enter_number">Enter Number</string>
-    <string name="get_otp">GET OTP</string>
+    <string name="send_otp">SEND OTP</string>
+    <string name="verify_otp">VERIFY OTP</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -51,4 +52,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="otp_verification">OTP Verification</string>
+    <string name="enter_the_otp_you_received_to">Enter the OTP you received to</string>
+    <string name="a_4_digit_otp_will_be_sent">A 4 digit OTP will be sent via SMS to verify your mobile number</string>
 </resources>
