--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="otp_verification">OTP Verification</string>
     <string name="enter_the_otp_you_received_to">Enter the OTP you received to</string>
     <string name="a_4_digit_otp_will_be_sent">A 4 digit OTP will be sent via SMS to verify your mobile number</string>
+    <string name="title_activity_area_map">People Near You!</string>
 </resources>
