--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Vibrant Hive</string>
+    <string name="app_name">Delivery BOSS</string>
     <string name="your_phone">Your Phone!</string>
     <string name="phone_number">Phone number</string>
     <string name="country_code">+91 - </string>
@@ -55,5 +55,7 @@
     <string name="otp_verification">OTP Verification</string>
     <string name="enter_the_otp_you_received_to">Enter the OTP you received to</string>
     <string name="a_4_digit_otp_will_be_sent">A 4 digit OTP will be sent via SMS to verify your mobile number</string>
-    <string name="title_activity_area_map">People Near You!</string>
+    <string name="title_activity_area_map">VIP\'s Near You</string>
+    <string name="title_activity_services">VIP Laundry Service</string>
+    <string name="action_settings">Settings</string>
 </resources>
